Spec 2.5 - Implement confluence integration
